2008-04-24  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/main.cc (search_packages_reply): Call sort_all_packages so
	that the search results are sorted as well (N83776).

2008-04-23  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* util.cc (make_global_package_list) : Code cleanup.
	(package_selected_toggled_callback) : Deleted two lines that
	caused warnings.

	* package_info_cell_renderer.c
	(package_info_cell_renderer_set_property) : Use g_strstrip() on
	the 'description' string. Use g_object_ref instead of duplicating
	the pixbuf.
	(package_info_cell_renderer_get_size) : Entries without a
	'description' field won't be expanded.
	(package_info_cell_renderer_render) : Entries without a
	'description' field won't be expanded.

	* main.cc (install_from_file_flow) : Fix a CRITICAL warning
	because we called gnome_vfs_get_uri_from_local_path with an URI
	instead of an absolute path.

2008-04-23  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/package-info-cell-renderer.h,
	src/package-info-cell-renderer.c: New.
	* src/Makefile.am: Compile them.

	* src/util.cc [CAIRO_CELL_RENDERER]: Use the new
	PackageInfoCellRenderer instead of the nested cell renderers from
	Modest.  This gives much better performance (N84324).

2008-04-22  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 2.1.9

	* src/update-notifier.c (update_notifier_finalize): Do not call
	gtk_signal_handler_disconnect on priv->button.  See the comment.

	* src/settings.cc (red_pill_check_always): Set to false as
	default.

	* src/confutils.cc, src/confutils.h (notifier_equal): Removed.
	* src/hildon-application-manager-config.cc (handle_generic_element):
	Make element_description a parameter.
	(handle_alist_element): New.
	(handle_element): Use it for the notifier elements.
	(main): Append the whole notifier configuration as one element.
	(prepend): Removed, configuration lists are unsorted.

	* src/update-notifier.c (struct _UpdateNotifierPrivate): Added